--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-connect-php": "^1.0.3",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-svg-sprite": "^1.5.0"
+    "gulp-svg-sprite": "^1.5.0",
+    "normalize-css": "^2.3.1"
   },
   "browserslist": [
     "last 1 version",
