update bug avec Blade

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "autoload": {
     "psr-4": {
-      "App\\":"app/"
+      "App\\":"app/",
+      "eftec\\": "vendor/eftec/"
+
     }
   },
   "require": {
