--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
-    "normalize-css": "^2.3.1"
+    "normalize-css": "^2.3.1",
+    "requirejs": "^2.3.6"
   },
   "browserslist": [
     "last 1 version",
@@ -27,7 +28,6 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "normalize.scss": "^0.1.0",
-    "picturefill": "^3.0.3",
-    "requirejs": "^2.3.6"
+    "picturefill": "^3.0.3"
   }
 }
