--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "not dead"
   ],
   "dependencies": {
+    "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "normalize.scss": "^0.1.0",
     "picturefill": "^3.0.3",
