Modifications Header + Réglages bugs

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "require": {
     "phpmailer/phpmailer": "^6.0",
     "eftec/bladeone": "^3.31",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-intl": "*"
   }
 }
