Ajout fonction util + réglages bugs catalogue

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .DS_Store
 Icon?
 
+
 #Dossier caché créé par PHPStorm
 .idea/
 
@@ -20,3 +21,4 @@ assets/js/
 
 #Dossiers cache de Blade
 ressources/cache/
+ressources/error_log.txt
