--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "phpmailer/phpmailer": "^6.0",
     "eftec/bladeone": "^3.31",
     "ext-pdo": "*",
-    "ext-intl": "*"
+    "ext-intl": "*",
+    "ext-json": "*"
   }
 }
