--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "eftec/bladeone": "^3.31",
     "ext-pdo": "*",
     "ext-intl": "*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-mongodb": "*"
   }
 }
